# voiceAgentStack

./: .dockerignore  .gitignore  Dockerfile  README.md  TRACING.md  env.example  evelenlabs.html  pyproject.toml  requirements.txt  server.py  setup.sh
Chatterbox/: README.md  docker-cpu.dockerfile  docker-gpu.dockerfile  server.py  test_client.py
Notes/: spec.md
Whisper/: docker-gpu.dockerfile  docker.cpu.dockerfile  server.py
bot/: azurebot.py  bot_websocket_server.py  config.json  elvenlabs_bot.py  fishbot.py  voice_agent.py
client/src/: app.ts
config/: conversation.json  conversations.json  convertedtoo.json  tools.json
frameworks/: elevenlabs.py
serializers/: elevenlabs.py
service/Dia/: tts.py
service/Kokoro/: tts.py
service/Kokoro/kokoro_onnx/: __init__.py  config.py
service/Xtts/: tts.py
service/chatterbot/: tts.py
service/moshi/: tts.py  ws_server.py
service/orpheus/: tts.py
service/parakeet/: stt.py
service/whisper/: stt.py
tools/: tools.py  utils.py
vad/tenvad/: tenvad.py
vad/webrtcvads/: webrtcvads.py
