[project]
name = "voiceagentstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "kokoro-onnx>=0.3.3",
    "modal>=1.0.4",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "orpheus-speech>=0.1.0",
    "pipecat-ai[fish,ollama,tracing,websocket,whisper]>=0.0.71",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]
