[project]
name = "voiceagentstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chatterbox-tts>=0.1.2",
    "fastapi>=0.115.13",
    "groq>=0.29.0",
    "kokoro-onnx>=0.3.3",
    "line-profiler>=4.2.0",
    "modal>=1.0.4",
    "moshi>=0.2.6",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "pipecat-ai[azure,fish,ollama,tracing,websocket,whisper]>=0.0.71",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
    "webrtcvad>=2.0.10",
]
